# catastrophe-morph-mcp

./: README.md  catastrophe_morph.py  pyproject.toml
src/catastrophe_morph_mcp/: __init__.py  server.py
src/ologs/: catastrophe_theory.yaml
